--- a/admin.auto.tfvars.example
+++ b/admin.auto.tfvars.example
@@ -1,3 +1,4 @@
+## payg
 adminSrcAddr   = ["192.168.2.1/32", "192.168.2.3/32", "192.168.4.3/32"]
 gceSshPubKey   = "ssh-rsa AAAAB3NzaC1yc2EAAAA..."
 gcp_project_id = "my-project"
@@ -12,3 +13,19 @@ privateKeyId   = "abcdcba123321"
 ksecret        = "svc-acct-secret"
 license1       = ""
 license2       = ""
+## BYOL key
+#license1       = "my-key"
+#license2       = "my-key"
+# image_name = "projects/f5-7626-networks-public/global/images/f5-bigip-15-1-0-4-0-0-6-byol-all-modules-2boot-loc-00618231635"
+# big-iq license pool
+## must be an IP
+#bigIqHost     = "192.168.2.1"
+#bigIqUsername = "zadmin"
+#bigIqSecret   = "my-bigiq-secret"
+#bigIqLicensePool = "my-license-Pool-name"
+#bigIqLicenseType = "licensePool"
+## ela
+#bigIqUnitOfMeasure = "yearly"
+#bigIqSkuKeyword1   = "my-license-type"
+#bigIqSkuKeyword2   = ""
+#bigIqLicensePool   = "my-license-pool-name"
